Remove unnecessary file

--- a/SimonGilbert.Blog.Validation/SimonGilbert.Blog.Validation.csproj
+++ b/SimonGilbert.Blog.Validation/SimonGilbert.Blog.Validation.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SimonGilbert.Blog.ViewModels\SimonGilbert.Blog.ViewModels.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="UserAccountValidator.cs" />
+  </ItemGroup>
 </Project>
